--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
   ],
   "require" : {
     "php": ">=5.5.0",
-    "activecollab/databaseconnection" : "dev-master"
+    "activecollab/databaseconnection" : "dev-master",
+    "doctrine/inflector" : "~1.0"
   },
   "require-dev" : {
     "phpunit/phpunit": "~4.8"
