--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,7 @@
   ],
   "require" : {
     "php": ">=5.6.0",
-    "activecollab/databaseconnection" : "dev-master",
-    "doctrine/inflector" : "~1.0"
+    "activecollab/databaseconnection" : "dev-master"
   },
   "require-dev" : {
     "phpunit/phpunit": "~4.8"
