Show Composer version after the upgrade

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,8 @@ mysql:
   encoding: utf8mb4
 before_install:
   - composer self-update
+  - composer --version
 install: composer install --dev
 before_script:
-  # create the database
   - mysql -e 'create database activecollab_database_object_test'
 script: phpunit -c test/phpunit.xml
