--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
   ],
   "require" : {
     "php": ">=5.6.0",
-    "activecollab/databaseconnection" : "dev-master"
+    "activecollab/databaseconnection" : "dev-next"
   },
   "require-dev" : {
     "phpunit/phpunit": "~4.8"
