--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
   ],
   "require" : {
     "php": ">=5.6.0",
-    "activecollab/databaseconnection" : "dev-next"
+    "activecollab/databaseconnection" : "dev-next",
+    "doctrine/inflector" : "~1.0"
   },
   "require-dev" : {
     "phpunit/phpunit": "~4.8"
