--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
   "require" : {
     "php": ">=5.6.0",
     "activecollab/databaseconnection" : "dev-next",
+    "activecollab/etag" : "~1.0", 
     "doctrine/inflector" : "~1.0"
   },
   "require-dev" : {
