--- a/composer.json
+++ b/composer.json
@@ -16,10 +16,11 @@
     "php": ">=5.6.0",
     "activecollab/databaseconnection" : "dev-next",
     "activecollab/etag" : "~1.0",
-    "doctrine/inflector" : "~1.0"
+    "doctrine/inflector" : "~1.0",
+    "psr/log" : "~1.0.0"
   },
   "require-dev" : {
-    "phpunit/phpunit": "~4.8"
+    "phpunit/phpunit": "~5.0"
   },
   "minimum-stability": "dev",
   "autoload": {
