--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
     "activecollab/databaseconnection" : "dev-next",
     "activecollab/etag" : "~1.0",
     "doctrine/inflector" : "~1.0",
-    "psr/log" : "~1.0.0"
+    "psr/log" : "~1.0.0",
+    "container-interop/container-interop" : "~1.1.0"
   },
   "require-dev" : {
     "phpunit/phpunit": "~5.0"
