--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
     "container-interop/container-interop" : "~1.1.0"
   },
   "require-dev" : {
-    "phpunit/phpunit": "~5.0"
+    "phpunit/phpunit": "~5.0",
+    "pimple/pimple" : "~3.0.0"
   },
   "minimum-stability": "dev",
   "autoload": {
