--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,14 @@
 {
-  "name" : "activecollab/databaseobject",
+  "name": "activecollab/databaseobject",
   "type": "library",
   "description": "Library that enables easy persistance of objects to the database",
-  "license" : "MIT",
+  "license": "MIT",
   "prefer-stable": true,
-  "keywords": [ "persistence", "mysql", "activecollab" ],
+  "keywords": [
+    "persistence",
+    "mysql",
+    "activecollab"
+  ],
   "homepage": "https://labs.activecollab.com",
   "authors": [
     {
@@ -12,16 +16,17 @@
       "email": "ilija.studen@activecollab.com"
     }
   ],
-  "require" : {
+  "require": {
     "php": ">=5.6.0",
-    "activecollab/databaseconnection" : "dev-next",
-    "activecollab/etag" : "~1.0",
-    "doctrine/inflector" : "~1.0",
-    "psr/log" : "~1.0.0"
+    "activecollab/databaseconnection": "dev-next",
+    "activecollab/etag": "~1.0",
+    "doctrine/inflector": "~1.0",
+    "psr/log": "~1.0.0"
   },
-  "require-dev" : {
+  "require-dev": {
+    "fabpot/php-cs-fixer": "~1.0",
     "phpunit/phpunit": "~5.0",
-    "pimple/pimple" : "~3.0.0"
+    "pimple/pimple": "~3.0.0"
   },
   "minimum-stability": "dev",
   "autoload": {
