Run tests from root + dependencies update
 - activecollab/containeraccess updated from 1.0.2 to 1.0.3
   See changes: https://github.com/activecollab/containeraccess/compare/1.0.2...1.0.3
   Release notes: https://github.com/activecollab/containeraccess/releases/tag/1.0.3

 - activecollab/databaseconnection updated from dev-next to dev-next
   See changes: https://github.com/activecollab/databaseconnection/compare/dev-next...dev-next
   Release notes: https://github.com/activecollab/databaseconnection/releases/tag/dev-next

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,4 +19,4 @@ before_install:
 install: composer install --dev
 before_script:
   - mysql -u root -e 'create database activecollab_database_object_test'
-script: phpunit -c test/phpunit.xml
+script: phpunit
