--- a/composer.json
+++ b/composer.json
@@ -18,13 +18,14 @@
     ],
     "require": {
         "php": ">=5.6.0",
-        "activecollab/databaseconnection": "^2.0.0",
+        "activecollab/databaseconnection": "^2.0",
         "activecollab/etag": "^1.0",
+        "activecollab/object": "^1.0",
         "doctrine/inflector": "^1.0",
         "psr/log": "^1.0.0"
     },
     "require-dev": {
-        "fabpot/php-cs-fixer": "~1.0",
+        "friendsofphp/php-cs-fixer": "^1.0",
         "phpunit/phpunit": "~5.0",
         "pimple/pimple": "~3.0.0"
     },
