--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
     "type": "library",
     "description": "Library that enables easy persistance of objects to the MySQL 5.7+ database",
     "license": "MIT",
+    "minimum-stability": "dev",
     "prefer-stable": true,
     "keywords": [
         "persistence",
@@ -18,7 +19,7 @@
     ],
     "require": {
         "php": ">=7.1",
-        "activecollab/databaseconnection": "^2.0",
+        "activecollab/databaseconnection": "v3.0.x-dev",
         "activecollab/etag": "^1.0",
         "activecollab/object": "^1.0",
         "doctrine/inflector": "^1.0",
@@ -29,7 +30,6 @@
         "phpunit/phpunit": "~5.0",
         "pimple/pimple": "~3.0.0"
     },
-    "minimum-stability": "stable",
     "autoload": {
         "psr-4": {
             "ActiveCollab\\DatabaseObject\\": "src",
