--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,4 @@ install: composer install --dev
 before_script:
   - bash .travis.install-mysql-5.7.sh
   - mysql -u root -e 'create database activecollab_database_object_test'
-script: phpunit
+script: vendor/bin/phpunit
