--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.0",
+        "monolog/monolog": "^1.0",
         "phpunit/phpunit": "~5.0",
         "pimple/pimple": "~3.0.0"
     },
