--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,15 @@ php:
   - 7.1
 services:
   - mysql
+addons:
+  apt:
+    sources:
+      - mysql-5.7-trusty
+    packages:
+- mysql-server
 before_install:
   - composer self-update
 install: composer install --dev
 before_script:
-  - bash .travis.install-mysql-5.7.sh
   - mysql -u root -e 'create database activecollab_database_object_test'
 script: vendor/bin/phpunit
