--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,17 @@
-sudo: true
 language: php
 php:
-  - 5.6
-  - 7
+  - 7.1
 services:
   - mysql
+addons:
+  apt:
+    sources:
+      - mysql-5.7-trusty
+    packages:
+      - mysql-server
 before_install:
   - composer self-update
 install: composer install --dev
 before_script:
-  - bash .travis.install-mysql-5.7.sh
-  - mysql -u root -e 'create database activecollab_database_object_test'
-script: phpunit
+  - mysql -e 'create database activecollab_database_object_test'
+script: vendor/bin/phpunit
