Fix the query that prepares test database

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,5 @@ before_install:
   - composer self-update
 install: composer install --dev
 before_script:
-  - mysql -e 'create database activecollab_database_object_test'
+  - mysql -u root -e 'create database activecollab_database_object_test'
 script: vendor/bin/phpunit
