--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,4 @@ before_install:
 install: composer install --dev
 before_script:
   - mysql -u root -e 'create database activecollab_database_object_test'
-script: vendor/bin/phpunit
+script: php vendor/bin/phpunit
