--- a/composer.json
+++ b/composer.json
@@ -24,14 +24,19 @@
         "psr/log": "^1.0.0"
     },
     "require-dev": {
+        "ext-mysqli": "*",
         "friendsofphp/php-cs-fixer": "^2.0",
         "monolog/monolog": "^1.0",
-        "phpunit/phpunit": "~5.0",
+        "phpunit/phpunit": "~7.0",
         "pimple/pimple": "~3.0.0"
     },
     "autoload": {
         "psr-4": {
-            "ActiveCollab\\DatabaseObject\\": "src",
+            "ActiveCollab\\DatabaseObject\\": "src"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
             "ActiveCollab\\DatabaseObject\\Test\\": "test/src"
         }
     }
