--- a/composer.json
+++ b/composer.json
@@ -15,9 +15,15 @@
             "email": "ilija.studen@activecollab.com"
         }
     ],
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "/Users/ilijastuden/Projects/Components/databaseconnection"
+        }
+    ],
     "require": {
-        "php": ">=8.0",
-        "activecollab/databaseconnection": "^3.0||^4.0",
+        "php": ">=8.1",
+        "activecollab/databaseconnection": "dev-master",
         "activecollab/etag": "^1.0",
         "activecollab/object": "^1.0",
         "doctrine/inflector": "^1.0",
@@ -27,8 +33,7 @@
         "ext-mysqli": "*",
         "friendsofphp/php-cs-fixer": "^2.0",
         "monolog/monolog": "^1.0",
-        "phpunit/phpunit": "~9.0",
-        "pimple/pimple": "~3.0.0"
+        "phpunit/phpunit": "~9.0"
     },
     "autoload": {
         "psr-4": {
